--- a/pixelot/src/app/right-sidebar/right-sidebar.component.scss
+++ b/pixelot/src/app/right-sidebar/right-sidebar.component.scss
@@ -22,6 +22,10 @@
   overflow-y: auto;
 }
 
+#right-sidebar-tabs {
+  max-height: 100%;
+}
+
 #right-sidebar-resizer {
   position: absolute;
   top: 0;
